[package]
name = "tree-sitter-comment"
description = "Tree-sitter grammar for highlighting strings wrapped in backticks within comments"
version = "0.1.0"
authors = ["Ryan D. Najac <ryan.najac@columbia.edu>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "comment"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/rdnajac/tree-sitter-comment"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
